style.css
/* ... */
.nav-menu.mobile { padding: 0; }
.nav-menu.mobile button:focus { outline: none; }
.nav-menu.mobile > button { padding: 16px 20px; float: right; }
.nav-menu.mobile button .svg-icon { transition: all 250ms; }
.nav-menu.mobile button.active .svg-icon { transform: rotate(180deg); }
.nav-menu.mobile ul { border: 0; }
.nav-menu.mobile ul li .menu-item-wrapper { justify-content: space-between; width: 100%; }
.nav-menu.mobile > div > ul > li:last-child { margin-bottom: 52px; }
.nav-menu.mobile ul li a { font-size: 16px; font-weight: 600; padding: 14px 20px; }
.nav-menu.mobile ul ul li a { font-size: 14px; }
.nav-menu.mobile ul ul li a { padding: 12px 0 12px 40px; }
.nav-menu.mobile ul ul ul li a { padding: 12px 0 12px 60px; }
.nav-menu.mobile ul button { margin: 10px 0; padding: 0 20px; }

/* menu styling */
.nav-menu a { color: #fff; }
.nav-menu .svg-icon { fill: #333; }
.nav-menu:not(.mobile) .menu ul { background: #eee; color: #fff; border-radius: 4px; box-shadow: 0 2px 2px rgba(0,0,0,0.15); }
.nav-menu:not(.mobile) .menu ul:after { border-bottom-color: #eee; }
.nav-menu:not(.mobile) .menu ul ul:after { border-right-color: #eee; }
.nav-menu-dropdown-left .nav-menu:not(.mobile) .menu ul ul:after { border-left-color: #eee; }

.nav-menu:not(.mobile) { font-size: 16px; font-weight: 300; float: right; padding: 4px 0 20px 0; margin-right: 70px; }
.nav-menu:not(.mobile) a { color: #666; }
.nav-menu:not(.mobile) a:hover { color: #333; }
.nav-menu:not(.mobile) ul ul a:hover { color: #333; }
.nav-menu:not(.mobile) ul ul > li:hover > span { background: rgba(255,255,255,0.1); }
.nav-menu:not(.mobile) ul ul a { color: #777; }
.nav-menu:not(.mobile) button { background: none; color: #666; padding: 0 4px; margin-left: 2px; border-radius: 4px; }
.nav-menu:not(.mobile) button.active { background: #eee; color: #333; }
.nav-menu:not(.mobile) button .svg-icon { fill: #bbb; }
.nav-menu:not(.mobile) ul ul button { background: none; color: #eee; padding: 0 5px; margin: 0 10px 0 0; }
.nav-menu:not(.mobile) ul ul button.active { background: #444; color: #eee; }
.nav-menu:not(.mobile) ul ul button .svg-icon { transform: rotate(-90deg); }
.nav-menu:not(.mobile) .menu > li { margin: 16px 20px 0 0; position: relative; }
.nav-menu:not(.mobile) .menu > li:last-child { margin-right: 0; }
.nav-menu:not(.mobile) .menu a { padding: 0; }

.nav-menu:not(.mobile) li.current_page_item > span > a, 
.nav-menu:not(.mobile) li.current-menu-item > span > a, 
.nav-menu:not(.mobile) li.current-menu-ancestor > span > a, 
.nav-menu:not(.mobile) li.current-post-parent > span > a { color: #333; }
.nav-menu:not(.mobile) ul ul li.current_page_item > span > a, 
.nav-menu:not(.mobile) ul ul li.current-menu-item > span > a, 
.nav-menu:not(.mobile) ul ul li.current-menu-ancestor > span > a, 
.nav-menu:not(.mobile) ul ul li.current-post-parent > span > a { color: #333; }

.nav-menu.mobile button.active .svg-icon { fill: #333; }
.nav-menu.mobile ul ul { background: rgba(0,0,0,0.03); }
.nav-menu.mobile ul li .menu-item-wrapper,
.nav-menu.mobile ul ul li .menu-item-wrapper { border-bottom: 1px solid rgba(0,0,0,0.07); }
.nav-menu.mobile > div > ul > li:first-child .menu-item-wrapper { border-top: 1px solid rgba(0,0,0,0.07); }
.nav-menu.mobile ul li a { color: #333; }
.nav-menu.mobile ul button,
.nav-menu.mobile ul ul button { border-left: 1px solid rgba(0,0,0,0.07); }

/* menu header styling */
#header .nav-menu:not(.mobile) .menu > li { margin: 16px 4px 0 0; }
#header .nav-menu:not(.mobile) button .svg-icon { fill: rgba(0,0,0,0.3); }
#header .nav-menu:not(.mobile) button.active { background: rgba(0,0,0,0.1); }

#header .nav-menu:not(.mobile) > div > ul > li > span { border: 1px solid transparent; border-radius: 20px; padding: 8px 10px; }
#header .nav-menu:not(.mobile) > div > ul > li:hover > span { border-color: #eee; }
#header .nav-menu:not(.mobile) > div > ul > li.current_page_item > span, 
#header .nav-menu:not(.mobile) > div > ul > li.current-menu-item > span, 
#header .nav-menu:not(.mobile) > div > ul > li.current-menu-ancestor > span, 
#header .nav-menu:not(.mobile) > div > ul > li.current-post-parent > span { background: #1db954; border-color: #1db954; }
#header .nav-menu:not(.mobile) > div > ul > li.current_page_item > span a, 
#header .nav-menu:not(.mobile) > div > ul > li.current-menu-item > span a, 
#header .nav-menu:not(.mobile) > div > ul > li.current-menu-ancestor > span a, 
#header .nav-menu:not(.mobile) > div > ul > li.current-post-parent > span a { color: #fff; }

#header .nav-menu:not(.mobile) > div > ul > li > ul > li span { border-bottom: 1px solid rgba(0,0,0,0.05); }
#header .nav-menu:not(.mobile) > div > ul > li > ul li:last-child span { border-bottom: 0; }

@media only screen and (max-width: 960px) {
	#header .nav-menu:not(.mobile) { border-top: 1px solid #eee; width: 100%; margin-right: 0; }
}

/* menu footer styling */
#footer .menu-toggle-icon span { background: #333; }

#footer .nav-menu a { font-weight: 400; text-transform: uppercase; }
#footer .nav-menu:not(.mobile) { background: transparent; font-size: 15px; border-top: 0; border-top: 1px solid rgba(0,0,0,0.06); float: none; padding-top: 4px; padding-left: 30px; padding-right: 30px; margin: 0; position: relative; z-index: 2; }
#footer .nav-menu:not(.mobile) a { color: rgba(0,0,0,0.5); }
#footer .nav-menu:not(.mobile) a:hover { color: #333; }
#footer .nav-menu:not(.mobile) button { transform: rotate(-180deg); }
#footer .nav-menu:not(.mobile) .menu ul button { transform: none; }
#footer .nav-menu:not(.mobile) .menu { justify-content: left; }
#footer .nav-menu:not(.mobile) .menu ul { background: #eee; top: auto; bottom: calc(100% + 19px); border-radius: 4px; box-shadow: 0 4px 10px rgba(0,0,0,0.03); }
#footer .nav-menu:not(.mobile) .menu ul a { font-size: 13px; }
#footer .nav-menu:not(.mobile) .menu ul span { border-bottom: 1px solid rgba(0,0,0,0.06); }
#footer .nav-menu:not(.mobile) .menu ul li:last-child span { border-bottom: 0; }
/* ... */

